# learn_gtest

./: .gitignore  CMakeLists.txt  Example.cpp  Example.hpp  README.md  main.cpp
.github/workflows/: test.yml
app/: CMakeLists.txt  main.cpp
example_lib/: CMakeLists.txt  example.cpp  example.hpp  functions.cpp  functions.h
functions_lib/: CMakeLists.txt  functions.cpp  functions.h
test/: CMakeLists.txt  ExampleTests.cpp  ExampleTests0.cpp  example_lib_tests.cpp  example_tests.cpp  example_tests0.cpp
